--- a/docs/_includes/custom-head.html
+++ b/docs/_includes/custom-head.html
@@ -1,6 +1,8 @@
+<style>
 @font-face {                                               
   font-family: 'Novarese';                                
   font-style: normal;                                      
   font-weight: 400;                                        
   src: url(https://github.com/mwenge/iatheory/raw/main/src/fonts/Novarese Medium.ttf) format('truetype');
 }                                                          
+</style>
