--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,5 +7,5 @@
   font-family: 'Novarese';                                
   font-style: normal;                                      
   font-weight: 400;                                        
-  src: url(//github.com/mwenge/iatheory/raw/main/src/fonts/Novarese Medium.ttf) format('truetype');
+  src: url(Novarese.ttf);
 }                                                          
